# stick-analyzer

./: .gitignore  CHANGELOG.md  CHANGELOG_v2.1.1.md  CHANGELOG_v2.1.2.md  CHANGELOG_v2.1.md  EXE_BUILD.md  LICENSE  README.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.2.md  RELEASE_NOTES_v2.1.md  analyzer.py  build_exe.py  controller_backend.py  main.py  main_gui.py  pyproject.toml  record_tab_refactor_plan.md  requirements-dev.txt  requirements.txt  stick_logger.py  ui-redesign-plan.md
docs/: EXE_BUILD.md
scripts/: diagnose_buttons.py  verify.ps1
src/app/: app_paths.py  version.py
src/app/adapters/: __init__.py
src/app/adapters/cli/: __init__.py  analyze_command.py  (+1 more)
src/app/application/: dto.py
src/app/compat/: __init__.py  analyzer.py
src/app/domain/: __init__.py
src/app/packaging/: __init__.py  build_exe.py
src/stick_analyzer/: __init__.py
src/stick_analyzer/application/: __init__.py  dto.py  ports.py
src/stick_analyzer/domain/: constants.py
tests/: test_analyzer.py  test_main_entry.py  test_main_gui_config.py  test_main_gui_recording.py
tests/adapters/: test_ai_prompt_builder.py  test_controller_adapter.py  test_csv_recording_writer.py  test_legacy_logger.py  test_matplotlib_plotter.py  test_text_report_renderer.py
tests/application/: test_analyze_recording.py  test_calibrate_controller.py  test_record_session.py
tests/domain/: conftest.py  test_burst_classifier.py  test_fire_burst_detector.py  test_threshold_policy.py  test_weapon_policy.py
tests/integration/: test_cli_analyze_command.py
tests/packaging/: test_build_exe.py
(+41 files in other folders)
